fix bugs and warning